2020-02-18-C语言篇4.md修改

--- a/_posts/2020-02-18-C语言篇4.md
+++ b/_posts/2020-02-18-C语言篇4.md
@@ -8,283 +8,335 @@
 
 # C语言基础
 
-## 程序得编译和调试
+# C语言篇4
 
-* gcc编译器(GNU Compiler)        支持语言
+## 数组
 
-  * .c                                           C语言源代码
-  * .h                                           程序所包含的头文件
-  * .i                                           已经预处理过的C源代码文件
-  * .s                                           汇编语言源代码文件
-  * .o                                           编译后的目标文件
+* 构造数据类型之一
+* 具有一定顺序关系的若干个相同类型变量的集合
+* 注意 数组 `不检查越界`
 
-* gcc -o hello hello.c    也可使用 gcc hello.c -o hello
+### 一维数组
 
-  * -o                                          输出可执行文件
-  * -c                                          只要求编译器输出目标代码(.o文件)
-  * -g                                          用于调试
-  * gcc hello.c -o hello -wall   语法错误警告显示
+* int a[6];
+* 数组名 表示内存`首地址`
+* sizeof(a);      数组占用的`总内存空间`
+* 编译时分配连续的内存
+* 内存字节数=`数组个数 x sizeof(元素数据类型)`
+* 数组不初始化  默认为0;
+  * static  修饰 默认为0
 
-* ./hello                                         查看输出结果      默认为./a.out          
+### 冒泡排序
 
-* 自带调试功能 `__FILE__, __FUNCTION__, __LINE__`
+* 一趟找最大最小
 
 ```
 #include <stdio.h>
 
 int main(){
-    
-    int m;
-    
-    m=1+2+3+4+5+6+7+8+9+10;
-    
-    printf("%s,%s,%d m=%d\n" __FILE__, __FUNCTION__, __LINE__, m);
-    
+
+    int a[] ={3,4,17,8,31,2,9,15},n,i,j;
+    int t;
+
+    n=sizeof(a)/sizeof(int);
+
+    for(i=0;i<n-1;i++){
+        for(j=0;j<n-1-i;j++){
+            if(a[j]>a[j+1]){
+                t=a[j];
+                a[j]=a[j+1];
+                a[j+1]=t;
+            }
+        }
+    }
+
+    for(i=0;i<n;i++)
+    	printf("%d ",a[i]);
+    return 0;
+}
+```
+
+* 改进冒泡
+
+## 二维数组
+
+```
+- int a[3][4];
+- 行数可省,列数不可省
+```
+
+## 多维数组
+
+* `int c[2][3][4]`
+
+## 打印杨辉三角
+
+```
+#include <stdio.h>
+
+int main(){
+	//int a[10][10];
+    int a[10][10]={{0}};//第三步
+	int i,j;
+	//第四步
+/*修改
+	for(i=0;i<10;i++){
+        for(j=0;j<10;j++){
+            a[i][j]=1;
+        }
+	}
+*/
+
+	for(i=0;i<10;i++){
+        a[i][0]=1;
+        for(j=1;j<=i;j++){
+            a[i][j]=a[i-1][j-1]+a[i-1][j];
+        }
+	}
+
+    /*
+   	第一步
+	for(i=0;i<10;i++){
+        for(j=0;j<10;j++){
+            printf("%d ",a[i][j]);
+            putchar('\n');
+        }
+	}
+	*/
+    /*第二步
+    for(i=0;i<10;i++){
+        for(j=0;j<=i;j++){
+            printf("%d ",a[i][j]);
+            putchar('\n');
+        }
+	}
+	*/
+    //第三步
+    for(i=0;i<10;i++){
+        for(j=0;j<=i;j++){
+            printf("%8d ",a[i][j]));
+        }
+         putchar('\n');
+	}
+
+
+	return 0;
+}
+```
+
+## 字符串数组和字符串
+
+* `char c[10], ch[3][4]`
+* 逐个赋值或用字符串常量
+
+  * `char ch[5]={'H','e','l','l','o'};`//叫字符数组
+  * `char ch[5]={'H','e','l'};               //叫字符串或字符数组`
+    * `默认补'\0'`
+* `char ch[6] = {"Hello"};    //包含了'\0'`
+* `char ch[6] = "Hello"      //包含了'\0'`
+* `char ch[] = "Hello"       //包含了'\0'`
+* `%s 打印 遇到'\0' 才结束打印`
+
+## 字符串逆序输出
+
+* gets 方式  字符串不变  逆序显示
+
+```
+#include <stdio.h>
+
+#define N 20
+int main(){
+
+    //char arr[] = "welcome";
+    //char arr[N];   //这条会出现乱码
+    char arr[N]={0};
+    int i,n;
+
+    printf("please input a string:");
+    gets(arr);
+
+    n=sizeof(arr)/sizeof(char);
+    for (i = n-1;i>=0;i--)
+    	putchar(arr[i]);
+    putchar('\n');
+
+    return 0;
+}
+
+//因为 n=sizeof(arr)/sizeof(char);  求得是总空间所占的个数
+//引入<string.h>  strlen   字符数组长度
+
+#include <stdio.h>
+#include <string.h>
+
+#define N 20
+int main(){
+
+    //char arr[] = "welcome";
+    //char arr[N];   //这条会出现乱码
+    char arr[N]={0};
+    int i,n;
+
+    printf("please input a string:");
+    gets(arr);
+
+    n=strlen(arr);
+    for (i = n-1;i>=0;i--)
+    	putchar(arr[i]);
+    putchar('\n');
+
     return 0;
 }
 
 
 
-输出
-	test2.c, main, 9 m=55
-	
-	
 ```
 
-* 一个程序应当包含两部分的内容
-  * 对数据的描述
-    * 在程序中要指定数据的类型和数据的组织形式,即数据结构
-  * 对操作的描述
-    * 即操作步骤,也就是算法	
-  * 线性结构
-  * 树形结构
-  * 图状结构
-  * 集合结构
+* gets 方式  字符串改变  正常显示
 
-## 数据类型
+```
+#include <stdio.h>
+#include <string.h>
 
-| 数据类型 | 分类            | 子分类                   | 代表                        |
-| -------- | --------------- | ------------------------ | --------------------------- |
-| 基本类型 | 整型            | signed(有符号)           | short、int、long、long long |
-|          |                 | unsigned(无符号)         | short、int、long、long long |
-|          | 字符型          | char                     | 分有无符号                  |
-|          | 实型            | float double             |                             |
-|          | 枚举型          | enum                     |                             |
-|          |                 |                          |                             |
-| 构造类型 | 数组            |                          |                             |
-|          | 结构体          | struct                   |                             |
-|          | 共用体          | union                    |                             |
-|          |                 |                          |                             |
-| 指针类型 |                 |                          |                             |
-| 空类型   | void            |                          |                             |
-| 逻辑类型 | bool类型        | true                     | 非零为真                    |
-|          | 引入<stdbool.h> | false                    | 零                          |
-|          | _Bool           |                          |                             |
-| 整数类型 |                 | `char`、short、int、long |                             |
+#define N 20;
+int main(){
 
-* _Bool类型长度为1字节
+    char arr[N]={0},ch;
+    int i,j,n;
 
-## char类型
+    printf("please input a string:");
+    gets(arr);
 
-| 类型名称      | 长度(字节0)    sizeof | 值域                            |
-| ------------- | --------------------- | ------------------------------- |
-| char          | 1                     | -128~127或0~255(使用/J编译选项) |
-| signed char   | 1                     | -128~127                        |
-| unsigned char | 1                     | 0~255                           |
+    n=strlen(arr);
 
-* char c1 =128;       //数据越界(-128)        127-> 01111111  +1 128->10000000 ->-128   `计算机存的是补码`
-* char c1=129;        //数据越界(-127)
-* unsigned char c2 =-1;   //数据越界(255)
+    i=0;
+    j=n-1;
 
-## 整型
-
-| 类型名称            | 长度(字节) | 值域                             |
-| ------------------- | ---------- | -------------------------------- |
-| short(signed short) | 2          | -32768~32767  2^16-1             |
-| unsigned short      | 2          | 0~65535                          |
-| int(signed)         | 4          | -2147483648~2147483647    2^32-1 |
-| unsigned int        | 5          | 0~4294967295                     |
-
-* <limits.h> 头文件 查看值域
-
-## 常量
-
-* 整型常量                    整型                     没有二进制
-  * 十进制                     3356                   
-  * 八进制                   06434                0开头
-  * 十六进制               0xd1c                 0x开头
-* 浮点常量                     实数                    只有十进制
-  * 单精度
-  * 双精度
-  * 一般形式                               3.5,  -12.5 ,      3.1415926 
-  * 指数形式                               1.176e+10         1.176 x 10^10
-    * ​					-3.5789e-8        -3.5789x10^(-8)
-* 字符常量
-  * 单引号里的单个字符
-  * 'A'   '?'
-  * `字符常量具有数值`     ASCII值
-  * 可以把字符常量看做一个字节的正整数   计算机看得是字符的数值
-  * char a,b,u,v
-  * a = 'F';                       //将70送给a                        a=70; 
-  * b = '0';                      //将48送给b                          b=48;
-  * b= 'A' + 2;                  //b存放的是'C'字符           b=65+2;
-  * u = ' ' + 'B';                 //u存放的是 'b''字符         u = 32 + 66;
-  * v = 'b' - 32;                //v存放的是 'B' 字符          v = 98 -32;
-* 字符串常量
-  * 双引号括起来的一串字符来表示的数据
-  * "Hello!"、"9"、"李四"、“”
-  * char arr[4] ={"abc"};                      默认有\n
-  * char arr2[4] = {'a','b','c','\0'};        两者等价
-* 标识常量(符号常量)
-  * 用标识符代替常量,其名称通常是一个标识符
-  * 使用之前必须预先定义   没有分号
-    * #define <标识常量名称> <常量>
-    * #define MAX 50                                 //MAX 标识常量   称为宏
-    * #define PI 3.1415926
-    * 一个标识常量,且占据一个书写行
-    * 多个宏配合   注意宏只是连接
-      * #define ONE 1
-      * #define TWO ONE + ONE
-      * #define THREE ONE + TWO
-      * int a =10, b=20, c;
-      * c = ONE + TWO*b + a;
-        * c的结果为1+1+1*20+10=32
-      * 使用括号解决
-        * #define TWO (ONE + ONE)
-
-## 变量
-
-* 变量名
-  * 字母、数字、下划线组成， 不能以数字开头 不能是关键字
-* 一般形式
-  * <存储类型> <数据类型> <变量名>
-* 变量的存储类型
-  * auto                                   局部变量                默认0
-    * auto int k;
-    * int j;
-    * double x;
-  * register                                寄存器型(CPU的寄存器)   加快程序运行   申请不到 同auto
-    * 必须是能被CPU所接受的类型,通常长度小于或等于整型的长度
-    * 不能用`&`来获取register变量的地址
-    * 可能会降低程序速度
-    * register int a =10;
-  * static                                   全局             默认值为0
-    * 局部static
-      * 在内存中 固定地址   而不是以堆栈方式存放
-      * 程序没有结束   就不会消失   
-  * extern
-    * 当变量在一个文件中的函数体外说明,所有其他文件中的函数或程序段都可引用这个变量
-    * 全局变量
-    * extern int global_a;
-    * 称为外部参照引用型,可悲其他文件引用, 而static不行
-
-## 运算符
-
-* 算术运算符
-
-  * `+ - * / % ++ --`
-  * 15 / 8 =1;
-  * float % float   float/double error   小数不可取余
-
-* 关系运算符
-
-  * `>    >=    <     <=    ==  !=`
-    * int a =5, b=6;
-    * a > (b-1)                                 //0
-    * (a+1)==b                               //1
-    * a>=(b-2)                                //1
-    * a<100                                    //1
-    * (a+3)<=b                               //0
-    * a != (b-1)                               //0       
-
-* 逻辑运算符       
-
-  * `!     &&      ||` 
-  * `&&`  短路特征-逢0截止
-  * `||`  短路特征-逢1截止
-
-* 位运算符           二进制    
-
-  * `~   &  |  ^ >> <<`
-
-  * unsigned char x =0x17,y;
-
-    * y=~x;                            // 0xE8
-
-  * 位移运算
-
-    * <运算量> <运算符> <表达式>
-    * <运算量> 必须为整型结果数值
-    * <运算符>  <<  >>
-    * 表达式     必须为整型结果数值
-    * unsigned char a = 0xe4, b;           //1110 0100
-    * b=a<<3;                                           //0111 0010 0000 ---> 0x720     注意char类型 1个字节 8位
-      * 结果 为 0x20
-    * 实现某位`快速置1`
-
-    ```
-    unsigned char x = 0x4, y=2;    //y表示倒数第二位
-    x = x | (1 << (y-1));          //0000 0100   -->    0000 0110
-    							   //
-    							   //0000 0001   -->     1
-    							   //0000 0010   -->     1 << 1
-    							   //0000 0110   -->     x | (1 << 1)
-    							 
-    ```
-
-    * 实现某位`快速去1`
-
-    ```
-    unsigned char x = 0x14, y=3;
-    x = x & (~(1 << (y-1)));      //0001 0100    -->    0001 0000
-    							  //
-    							  //
-    							  //0000 0001   -->     1
-    							  //0000 0100   -->     1 << 2
-    							  //1111 1011   -->     ~(1 << 2)
-    							  //0001 0000   -->     x & (~(1 << 2))
-    ```
+    while(i<j){
+        ch =arr[i];
+        arr[i]=arr[j];
+        arr[j]=ch;
+        i++;
+        j--;
+    }
 
 
-* 赋值复合运算符
-  * `+=  -=  *=  /=  %=  &=  |=  ^=  >>=  <<=`
-* 条件运算符(三元)
-  * `表达式1 ? 表达式2 : 表达式3`
-* 逗号运算符     表达式的值是由最后一个表达式结果决定
-  * float x =10.5,y=1.8, z=0;
-  * z = (x+=5, y = x + 0.2);                       //x =15.5 ,y =17.7 ,z =17.7
-  * z = (x=y=5, x += 1);
-  * z = (x =5, y=6, x+y);
-  * z = (z=8, x=5, y=3);
-* sizeof运算符
-  * sizeof(类型或变量名)
-  * 它只针对数据类型,而不针对变量
-  * int a =5;
-  * long b=3;
-  * long long c=9;
-  * sizeof(a)=4,szeof(b)=8;sizeof(c)=8
-  * sizeof(int)=4,szeof(long)=8;sizeof(long long)=8
+    puts(arr);
 
-## 优先级
+    return 0;
+}
+```
 
-| 优先级 | 运算符及其含义                                            | 结合规律 |
-| ------ | --------------------------------------------------------- | -------- |
-| 1      | []   ()   .   ->   后缀++  后缀--                         | 从左向右 |
-| 2      | 前缀++   前缀--  sizeof  &   ^   +  -   ~   !             | 从右向左 |
-| 3      | 强制类型转换                                              | 从右向左 |
-| 4      | ^    /   %   (算术乘除)                                   | 从左向右 |
-| 5      | +   -    (算术加减)                                       | 从左向右 |
-| 6      | <<    >>   (位移位)                                       | 从左向右 |
-| 7      | <    <=   >  >=                                           | 从左向右 |
-| 8      | ==    !=                                                  | 从左向右 |
-| 9      | &(位逻辑与)                                               | 从左向右 |
-| 10     | ^(位逻辑异或)                                             | 从左向右 |
-| 11     | \|(位逻辑或)                                              | 从左向右 |
-| 12     | &&                                                        | 从左向右 |
-| 13     | \|\|                                                      | 从左向右 |
-| 14     | ? :                                                       | 从右向左 |
-| 15     | =   *=  /=  %=  +=  -=  <<=  >>=  &=  ^=  !=   赋值运算符 | 从右向左 |
-| 16     | ,   逗号运算符                                            | 从左向右 |
+```
+#include <stdio.h>
+#include <string.h>
+
+#define N 20;
+int main(){
+
+    char arr[N]={0},ch;
+    int i,j,n;
+
+    printf("please input a string:");
+    gets(arr);
+
+    n=strlen(arr);
+
+    i=0;
+    j=n-1;
+
+    while(i<j){
+        ch =arr[i];
+        arr[i]=arr[j];
+        arr[j]=ch;
+        i++;
+        j--;
+    }
+
+
+    puts(arr);
+
+    return 0;
+}
+```
+
+## 字符串函数
+
+* <string.h>
+
+* strlen(字符数组)
+
+  * 字符串长度函数
+  * 返回值 :  实际长度 不包含'\0'
+  * \xhhh表示十六进制
+  * \ddd表示8进制的
+    * 对于strlen(s)
+      * char s[10]={'A','\0','B','C','\0'};               //1
+      * `char s[] ="\t\v\\\0will\n";  `                      //3
+      * char s[]="\x69\141\n";                           //3
+    * 对于sizeof(s)/sizeof(char)
+      * 10
+      * 10
+      * 4
+
+* strcpy(字符数组1,字符串2);
+
+  * 将字符串2拷贝到字符数组1中去
+  * 返回  返回字符数组1的首地址
+  * 字符数组1必须足够大
+  * 拷贝时'\0'一同拷贝
 
 
 
+ ```
+#include <stdio.h>
+#include <string.h>
+
+#define N 30
+
+int main(){
+
+	char src[] = "makeru";
+    char dest[N];
+
+    strcpy(dest,str);
+
+    puts(src);
+    puts(dest);
+
+    //makeru
+    //makeru
+    return 0;
+}
+ ```
+
+* strcat(字符数组1,字符串2);
+
+  * 将字符串2l连接到字符数组1中去
+  * 返回  返回字符数组1的首地址
+  * 字符数组1必须足够大
+
+* strcmp(字符数组1,字符数组2);    //字符数组或字符串常量
+
+  * 比较字符数组1和字符数组2
+  * 返回值
+    * s1==s2                        0
+    * s1 > s2                         1
+    * s1 < s2                       <0
+  * 比较  按`ASCII值大小`相比较
+
+## 字符串函数
+
+```
+- strncpy(p,p1,n)                               复制指定长度的字符串
+- strncat(p,p1,n)                               附加指定长度的字符串
+- strcasecmp()                                  忽略大小写比较字符串
+- strncmp(p,p1,n)                               比较指定长度的字符串
+- strchr(p,c)                                   在字符串中查找指定字符   返回内存位置
+- strrchr(p,c)                                  在字符串中反向查找指定字符
+- strstr(p,p1)                                  查找字符串
+- isalpha()                                     检查是否为字母
+- isupper()                                     检查是否为答谢字母字符
+- islower()                                     检查是否为小写字母字符
+- isdigit()                                     检查是否为数字
+```
