--- a/_posts/2020-02-09-HTML汇总.md
+++ b/_posts/2020-02-09-HTML汇总.md
@@ -2,7 +2,7 @@
    layout: post
    title:  "HTML汇总"                                                        
    date: 2020-02-09 09:00:00 +0530
-   categories: C
+   categories: HTML
 ---
   HTML 
 
