--- a/_posts/2020-02-21-C语言会员管理系统.md
+++ b/_posts/2020-02-21-C语言会员管理系统.md
@@ -6,127 +6,217 @@
 ---
   C基础训练
 
+
 #include <stdio.h>
 #include <string.h>
 #include <stdlib.h>
 
+
+
+
+typedef struct{//记录用户信息
+	char *name; //姓名
+	int sex;       //性别 0女 1男
+	char *tel;  //手机
+	int score;     //积分
+} User;
+
+void addUser(User *U);
+
+void selectUser(User *u,int index);
+
+void selectUserScore(User *u,int index);
+
+
 int main(){
 
 	printf("==============欢迎进入会员管理系统=================\n");
-	
+
 	int option;//用户选择
 
+	User users[10];//创建10个用户
+
 	int index=0;//用户数
-
-	struct User {//记录用户信息
-       		 char name[10]; //姓名
-		 int sex;       //性别 0女 1男
-		 char tel[11];  //手机
-		 int score;     //积分
-   	 };
-	
-	struct User users[10];//创建10个用户
-
 
 
 	while(1){
 
-	printf("\n------主菜单------\n1.查看会员\n2.新增会员\n3.积分管理\n0.退出\n请选择:");
-	
-	scanf("%d",&option);
+		printf("\n------主菜单------\n1.查看会员\n2.新增会员\n3.积分管理\n0.退出\n请选择:");
 
-	switch(option){
-		case 1 :
-			printf("------查看会员--------------------\n姓名\t\t性别\t手机\t\t积分\t\n");
-			if(index==0){
-				printf("无记录!!!!\n");
+		scanf("%d",&option);
+
+		switch(option){
+			case 1 :
+
+				if(index==0){
+					printf("\n无记录!!!!\n");
+					break;
+				}
+
+				selectUser(users,index);
+
 				break;
-			}
-			for(int i=0; i<index;i++){
-				printf("%s\t\t",users[i].name);
-				if(users[i].sex == 0){
-					printf("女\t");
-				}else{
-					printf("男\t");
+			case 2 :
+				if(index>9){
+					printf("\n库已满!!!\n");
+					break;
 				}
-				printf("%s\t",users[i].tel);
-				printf("%d\n",users[i].score);
-			}
-		break;
-		case 2 :
-			if(index>9){
-				printf("库已满!!!\n");
+
+				addUser(&users[index++]);
 				break;
-			}
-			printf("-----新增会员-----\n");
-			printf("请输入姓名:");
-			scanf("%s",users[index].name);
-			
-			while(1){
-				if(strlen(users[index].name)>10){
-					printf("请输入姓名长度小于10:");
-					scanf("%s",users[index].name);
-				}else{
-					break;
-				}
-			}
+			case 3 :
 
-			printf("请输入性别(0女 1男):");
-			scanf("%d",&users[index].sex);
-			int count=0;
-			while(1){
-				if(count>10){
-					printf("操作失误count=%d!!!\n",count);
-					exit(0);
-				}
-				if(users[index].sex!=0 && users[index].sex!=1){
-					printf("请输入性别(0女 1男):");
-					scanf("%d",&users[index].sex);
-					count++;
-				}else{
+				if(index==0){
+					printf("\n无记录!!!\n");
 					break;
 				}
-			}
 
-			printf("请输入手机:");
-			scanf("%s",users[index].tel);
-			while(1){
-				if(strlen(users[index].tel)!=11){
-					printf("请输入手机长度等于11:");
-					scanf("%s",users[index].tel);
-				}else{
-					break;
-				}
-			}
-			printf("请输入积分:");
-			scanf("%d",&users[index].score);
-			printf("[保存成功]");
-			index++;
-		break;
-		case 3 :
-			printf("------积分管理------\n");
-			printf("姓名\t\t积分\n");
-			if(index==0){
-				printf("无记录!!!\n");
-			}
-			for(int i=0;i<index;i++){
-				printf("%s\t\t",users[i].name);
-				printf("%d\t\n",users[i].score);
-			}
-		break;
-		case 0 :
-			printf("\n欢迎使用!!!\n");
-			exit(0);
-		break;
-		default :
-			printf("请输入正确的选择!!!!\n");
-		break;
-	
+				selectUserScore(users,index);
+
+				break;
+			case 0 :
+				printf("\n欢迎使用!!!\n");
+				exit(0);
+				break;
+			default :
+				printf("\n请输入正确的选择!!!!\n");
+				break;
+
+		}
+
 	}
+
+	for(int i=0;i<index;i++){
+
+		free(users[i].name);
+		free(users[i].tel);
 
 	}
 
 
 	return 0;
 }
+
+
+
+void addUser(User *u){
+
+
+	printf("\n-----新增会员-----\n");
+	printf("请输入姓名:");
+
+	u->name = malloc(sizeof(char));
+
+	scanf("%s",u->name);
+
+	while(1){
+		if(strlen(u->name)>10){
+			printf("请输入姓名长度小于10:");
+			scanf("%s",u->name);
+		}else{
+			break;
+		}
+	}
+
+	printf("请输入性别(0女 1男):");
+	scanf("%d",&u->sex);
+	int count=0;
+	while(1){
+		if(count>10){
+			printf("操作失误count=%d!!!\n",count);
+			exit(0);
+		}
+		if(u->sex!=0 && u->sex!=1){
+			printf("请输入性别(0女 1男):");
+			scanf("%d",&u->sex);
+			count++;
+		}else{
+			break;
+		}
+	}
+
+	printf("请输入手机:");
+	u->tel = malloc(sizeof(char));
+	scanf("%s",u->tel);
+	while(1){
+		if(strlen(u->tel)!=11){
+			printf("请输入手机长度等于11:");
+			scanf("%s",u->tel);
+		}else{
+			break;
+		}
+	}
+	printf("请输入积分:");
+	scanf("%d",&u->score);
+	printf("[保存成功]");
+
+}
+
+void selectUser(User *u,int index){
+
+
+	printf("------查看会员--------------------\n姓名\t\t性别\t手机\t\t积分\t\n");
+	for(int i=0; i<index;i++){
+		printf("%s\t\t",u->name);
+		if((u->sex)== 0){
+			printf("女\t");
+		}else{
+			printf("男\t");
+		}
+		printf("%s\t",u->tel);
+		printf("%d\n",u->score);
+		u++;
+	}
+
+}
+
+void selectUserScore(User *u,int index){
+
+	while(1){
+		printf("\n------积分管理------\n");
+		printf("姓名\t\t积分\n");
+		for(int i=0;i<index;i++){
+			printf("%s\t\t",u->name);
+			printf("%d\t\n",u->score);
+			u++;
+		}
+		u-=index;
+
+		printf("\n1.修改\n0.退出\n请输入操作:");
+		int choose=0;
+		scanf("%d",&choose);
+
+		int i=0;
+
+		switch(choose){
+			case 1:
+				printf("\n请输入需要修改的index[0-%d]:",index-1);
+				scanf("%d",&i);
+				if(i>index-1){
+					printf("error:请输入index范围[0-%d]\n",index-1);
+					break;
+				}
+				u+=i;
+				printf("\n请输入积分:(now:%d)",u->score);
+
+				scanf("%d",&u->score);
+
+				printf("\n[修改完成]\n");
+				u-=i;
+				break;
+			case 0:
+				printf("\n[操作完成]\n");
+				break;
+			default:
+				printf("\n请输入正确的选择!!!\n");
+				break;
+		}
+		if(choose==0){
+			break;
+		}
+	}
+
+
+}
+
 
