2020-03-05-基于jquery数据交互.md

--- a/_posts/2020-03-05-基于jquery数据交互.md
+++ b/_posts/2020-03-05-基于jquery数据交互.md
@@ -1,11 +1,70 @@
 ---
    layout: post
-   title:  "HTTP"                                                        
+   title:  "Jquery数据交互"                                                        
    date: 2020-03-05 09:00:00 +0530
    categories: Jquery  
 ---
   Jquery
 
+* index.js
+
+```
+$(function() {
+    $("#login").on("click", function() {
+        window.location = "./login/login.html";
+    })
+    $("#register").on("click", function() {
+        window.location = "./register/register.html";
+    })
+
+    let token = window.localStorage.getItem("token");
+
+    if (token != null) {
+        let data = {
+            "token": token,
+        }
+        $.get("http://playground.it266.com/profile", data, function(result) {
+            if (result.status) {
+                $('#main_right_nologin').hide();
+                $('#main_right_login').show();
+                $("#headImg img").attr("src", result.data.avatar);
+                $("#nickname").html("Hi! " + result.data.username);
+                $("#point").html(result.data.point);
+                $("#balance").html(result.data.balance);
+            }
+        }, "json")
+    }
+
+
+    let count = 0;
+    let timer = setInterval(imgop, 3000);
+
+    $('#top_ad_point ul li').on("click", function() {
+        $(this).addClass('active').siblings().removeClass("active");
+        for (let i = 0; i < $('#top_ad_point ul li').length; i++) {
+            if ($($('#top_ad_point ul li')[i]).hasClass('active')) {
+                count = i;
+            }
+            $($('#top_ad img')[count]).css("opacity", "1");
+        }
+    })
+
+    function imgop() {
+        $($('#top_ad_point ul li')[count]).addClass("active").siblings().removeClass("active");
+        for (let i = 0; i < $('#top_ad_point ul li').length; i++) {
+            if ($($('#top_ad_point ul li')[i]).hasClass('active')) {
+                count = i;
+            }
+            $($('#top_ad img')[i]).css("opacity", "0");
+        }
+        $($('#top_ad img')[count]).css("opacity", "1");
+        count < $('#top_ad_point ul li').length - 1 ? count++ : count = 0;
+    }
+});
+
+
+
+```
 * index.html
 
 ```
