2020-03-05-基于jquery数据交互.md

--- a/_posts/2020-03-05-基于jquery数据交互.md
+++ b/_posts/2020-03-05-基于jquery数据交互.md
@@ -1,10 +1,10 @@
 ---
    layout: post
-   title:  "Jquery数据交互"                                                        
+   title:  "Jquery数据交互 + Ajax"                                                        
    date: 2020-03-05 09:00:00 +0530
-   categories: Jquery  
+   categories: Jquery  Ajax
 ---
-  Jquery
+  Jquery  Ajax
 
 * index.js
 
