--- a/_posts/2020-03-09-React组件化思想和动态加载数据.md
+++ b/_posts/2020-03-09-React组件化思想和动态加载数据.md
@@ -2,7 +2,7 @@
    layout: post
    title:  "React组件化思想和动态加载数据"                                                        
    date: 2020-03-09 09:00:00 +0530
-   categories: REact 
+   categories: React 
 ---
   React  
 
