--- a/_posts/2020-03-18-React初解.md
+++ b/_posts/2020-03-18-React初解.md
@@ -1,6 +1,6 @@
 ---
    layout: post
-   title:  "React"                                                        
+   title:  "React初步认识"                                                        
    date: 2020-03-18 09:00:00 +0530
    categories: React 
 ---
