--- a/_posts/2020-04-18-JAVA后端API书写.md
+++ b/_posts/2020-04-18-JAVA后端API书写.md
@@ -1,9 +1,9 @@
-```
+---
    layout: post
-   title: "JAVA&API"                                                        
+   title: "jAVA&API"                                                        
    date: 2020-04-18 09:00:00 +0530
    categories: Java
-```
+---
 
 
 
