--- a/_posts/2020-04-12-vue篇一.md
+++ b/_posts/2020-04-12-vue篇一.md
@@ -4,6 +4,10 @@
    date: 2020-04-12 06:00:00 +0530
    categories: Vue
 ---
+  Vue
+
+
+# Vue 篇一
 
 * 渐进式框架       哪里用到嵌入到哪里
 * Core + Vue-router + Vuex
