--- a/_posts/2020-05-12-Spring.md
+++ b/_posts/2020-05-12-Spring.md
@@ -123,7 +123,7 @@ public class UserTest {
 ```
 
 ```
-原先  多一个UserDao的实现类 就需要发癌变UserServiceImpl 里的实例对象
+原先  多一个UserDao的实现类 就需要换 UserServiceImpl 里的实例对象
 	UserDaoImpl
 	UserDaoMysqlImpl
 	UserDaoOracleImpl
