--- a/_posts/2020-05-12-Spring.md
+++ b/_posts/2020-05-12-Spring.md
@@ -24,7 +24,7 @@
 
 * 导包
 
-```
+```xml
 <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-webmvc</artifactId>
@@ -36,9 +36,6 @@
     <artifactId>spring-jdbc</artifactId>
     <version>5.2.5.RELEASE</version>
 </dependency>
-
-
-
 ```
 
 # 优点
@@ -83,12 +80,6 @@ import com.cyz.dao.UserDaoImpl;
 import com.cyz.dao.UserDaoMysqlImpl;
 import com.cyz.dao.UserDaoOracleImpl;
 
-/**
- * com.cyz.service
- *
- * @author cyz
- * @create 2020/05/19 15-15
- */
 public class UserServiceImpl implements UserService{
 
     private UserDao userDao = new UserDaoImpl();
@@ -105,12 +96,6 @@ package com.cyz;
 import com.cyz.service.UserService;
 import com.cyz.service.UserServiceImpl;
 
-/**
- * com.cyz
- *
- * @author cyz
- * @create 2020/05/19 15-16
- */
 public class UserTest {
 
     public static void main(String[] args) {
@@ -150,12 +135,6 @@ import com.cyz.dao.UserDaoImpl;
 import com.cyz.dao.UserDaoMysqlImpl;
 import com.cyz.dao.UserDaoOracleImpl;
 
-/**
- * com.cyz.service
- *
- * @author cyz
- * @create 2020/05/19 15-15
- */
 public class UserServiceImpl implements UserService{
 
     private UserDao userDao;
@@ -182,12 +161,6 @@ import com.cyz.dao.UserDaoOracleImpl;
 import com.cyz.service.UserService;
 import com.cyz.service.UserServiceImpl;
 
-/**
- * com.cyz
- *
- * @author cyz
- * @create 2020/05/19 15-16
- */
 public class UserTest {
 
     public static void main(String[] args) {
@@ -229,12 +202,6 @@ public class UserTest {
 ```java
 package com.cyz.pojp;
 
-/**
- * com.cyz.dao
- *
- * @author cyz
- * @create 2020/05/19 15-46
- */
 public class Hello {
     private String str;
 
@@ -306,9 +273,9 @@ public class MyTest {
 
 ```
 
-* 将推到改造成Spring管理对象
+* 将推导改造成Spring管理对象
 
-```
+```xml
 <?xml version="1.0" encoding="UTF-8"?>
     <beans xmlns="http://www.springframework.org/schema/beans"
            xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -318,6 +285,7 @@ public class MyTest {
         </bean>
         <bean id="oracleImpl" class="com.cyz.pojp.UserDaoOracleImpl">
         </bean>
+        
         <bean id="UserServiceImpl" class="com.cyz.service.UserServiceImpl">
 <!--
     ref : 引用Spring容器中创建好的对象
@@ -328,7 +296,7 @@ public class MyTest {
     </beans>
 ```
 
-```
+```java
 public class UserTest {
 
     public static void main(String[] args) {
@@ -695,7 +663,7 @@ public class MyTest {
 
 ### p命名空间注入
 
-```
+```java
 package com.cyz.pojo;
 
 public class User {
@@ -737,7 +705,7 @@ public class User {
 
 ```
 
-```
+```xml
 <?xml version="1.0" encoding="UTF-8"?>
 <beans xmlns="http://www.springframework.org/schema/beans"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -756,7 +724,7 @@ public class User {
 </beans>
 ```
 
-```
+```java
     @Test
     public void testp(){
         ApplicationContext context = new ClassPathXmlApplicationContext("userbeans.xml");
@@ -780,7 +748,7 @@ public class User {
 
 * 需要导入约束
 
-```
+```xml-dtd
  xmlns:p="http://www.springframework.org/schema/p"
  xmlns:c="http://www.springframework.org/schema/c"
 ```
@@ -792,7 +760,7 @@ public class User {
 * request
 * session
 
-```
+```xml
 <!--    需要无参构造-->
     <bean id="user" class="com.cyz.pojo.User" p:name="xxx" p:age="18" scope="singleton"/>
 <!--    需要有参构造-->
@@ -1057,7 +1025,7 @@ public class People {
 
 * @Nullable   可以为null
 
-```
+```java
 public People(@Nullable String name) {
         this.name = name;
     }
@@ -1065,21 +1033,21 @@ public People(@Nullable String name) {
 
 * @required    对象可以为null   默认为true 表示不能为null 会空指针异常
 
-```
+```java
  @Autowired(required = false)
  private Cat cat;
 ```
 
 * @Qualifier  指定一个bean id
 
-```
+```java
 @Qualifier(value = "dog222")
  private Dog dog;
 ```
 
 * @Resource   组合了找id和找class   先byName 在byType 找不到报错
 
-```
+```java
 @Resource
  private Cat cat;
 //指定对应的id
@@ -1112,19 +1080,19 @@ aop包的导入 (maven)
 </beans>
 ```
 
-```
+```java
 @Component :    组件 放在类上   表示这个类被spring管理  就像bean
 ```
 
 * 属性注入
 
-```
+```java
 @Value("xxx") : 属性赋值 : 加在属性或set方法上  就像 <property name="name" value="xxx"/>
 ```
 
 * 衍生的注解
 
-```
+```java
 和@Component相似 使用在MVC层    都是将类交由Spring管理
 dao层				@Repository
 controller层			@Controller
@@ -1133,7 +1101,7 @@ service层			@Service
 
 * 自动装配
 
-```
+```java
 @Autowired	自动装配通用类型	名字
 	如果不能唯一装配, 则需要@Qualifier(value = "xxx")
 @Nullable		字段可以为空
@@ -1142,7 +1110,7 @@ service层			@Service
 
 * 作用域
 
-```
+```java
 @Scope("singleton")
 @Scope("prototype")
 
@@ -1440,7 +1408,7 @@ public class Client {
 
 ```
 
-* 不要取修改原有的代码
+* 不用去修改原有的代码
 * 在代理完成新增的功能
 
 ##### AOP
@@ -1766,7 +1734,7 @@ import java.lang.reflect.Method;
 
 public class Log implements MethodBeforeAdvice {
     //method 要执行的目标对象的方法
-    //orgs: 参数
+    //args: 参数
     //target: 目标对象
     public void before(Method method, Object[] args, Object target) throws Throwable {
         System.out.println(target.getClass().getName()+"的"+method.getName()+"被执行了");
@@ -1832,9 +1800,9 @@ public class MyTest {
         ApplicationContext context = new ClassPathXmlApplicationContext("applicationContext.xml");
 
 //        动态代理的是接口
-        UserService userUservice = context.getBean("userService",UserService.class);
+        UserService userService = context.getBean("userService",UserService.class);
 
-        userUservice.add();
+        userService.add();
     }
 }
 
