--- a/_posts/2020-02-09-HTML汇总.md
+++ b/_posts/2020-02-09-HTML汇总.md
@@ -7,10 +7,10 @@
   HTML 
 
 # HTML笔记汇总
-[TOC]
+
 
 ## HTML
-```
+```html
 * 超文本标记语言*（英语：HyperText Markup Language，简称：HTML
 
 	* 是一种用于创建网页的 标准标记语言，目前最新标准为 HTML5
@@ -262,7 +262,7 @@
 ```
 
 ## 整理
-```
+```HTML
 1. 全局框架标签
 	html
 	head
@@ -311,7 +311,7 @@
   专业术语: 统一资源定位器
 ```
 ### 组成
-```
+```HTML
     基本组成: 协议+域名
     完整组成: 协议+域名+端口+路径+参数+锚点
 
@@ -338,7 +338,7 @@
                 <a href="xxxxx#锚点名">
 ```
 ### 注意
-```
+```HTML
     * 每个URL最终都会指向一个文件
     * 文件夹中若有 index文件,那么在访问该文件夹时,会自动执行index文件
     
@@ -347,7 +347,7 @@
 
 ## 图片
 
-```
+```HTML
     1. 图片
         * 标签: img
         * 属性: 
@@ -367,12 +367,12 @@
 ## 路径
 
 ### 定义
-```
+```HTML
     1. 文件路径
             适用于所有文件,涵盖范围:HTML,CSS,JS,PHP,JAVA等
 ```
 ### 路径分类
-```
+```HTML
     1. 相对路径
             .   当前目录
             ..  上级目录
@@ -395,7 +395,7 @@
 
 ## 音频
 ### 音频
-```
+```HTML
 		* 标签: audio
 		* 属性: 
 				src			音频来源地址
@@ -404,7 +404,7 @@
 		 		autoplay	自动播放
 ```
 ### 媒体标签
-```
+```HTML
 		* 解释: 网页加载时按照source指定的格式匹配文件,一旦匹配到将不在匹配当前项以下文件,若没有匹配到则显示提示信息.
 		* 标签: source
 		* 属性:
@@ -422,7 +422,7 @@
 
 ## 视频
 ### 音频
-```
+```HTML
 	* 与音频写法一致
 	1. 视频
 		* 标签: video
@@ -433,7 +433,7 @@
 				autoplay	自动播放
 ```
 ### 媒体标签
-```
+```HTML
 		* 标签: source
 		* 属性: 
 		 		src			视频来源地址
@@ -447,7 +447,7 @@
 ```
 ## 表格
 ### 表格标签
-```
+```HTML
 	* table		表格声明
 	* caption	表格标题
 	* tr		表行
@@ -461,7 +461,7 @@
 	当标签写在table标签外时,需要与table建立联系(疑问??????)
 ```
 ### 相关属性
-```
+```HTML
 	* border		边框
 	* rowspan		行合并
 	* colspan		列合并
@@ -476,7 +476,7 @@
 
 ## 表单
 ### 表单声明及属性
-```
+```HTML
 * 表单能与用户发生交互关系
 
 1. 表单声明
@@ -522,7 +522,7 @@
 ```
 
 ## 文件大小知识普及
-```
+```HTML
 * 计算机大小单位
 
 B		字节			一个数字,字母or标点占1B
@@ -541,7 +541,7 @@ TB		1TB = 1024GB
 ```
 
 ## 上传文件的必要条件
-```
+```HTML
 * 3个必要条件
 	* form的method=post
 	* form的enctype="multipart/form-data"
@@ -550,7 +550,7 @@ TB		1TB = 1024GB
 
 ## input表单详解
 ### input及属性
-```
+```HTML
 * 1. 最常用的表单	input
 	
 * 2. 属性
@@ -577,7 +577,7 @@ TB		1TB = 1024GB
 					file表单的name值 补上[],才能实现正真的多选文件
 ```
 ### 新增type属性
-``` 			
+``` 			HTML
         	* H5新增表单
         			email		邮箱
         			number		数字
@@ -587,7 +587,7 @@ TB		1TB = 1024GB
         								
 ```
 ## 下拉框select
-```
+```HTML
 1. 下拉框
 	* 父标签: select
 	* 子标签: option		子下拉框选项
@@ -601,10 +601,12 @@ TB		1TB = 1024GB
 ## 多文本域
 
 ### 多文本域
-	标签: textarea
+```HTML
+标签: textarea
+```
 
 ### 属性
-```
+```HTML
 	* rows		行数
 	* cols		列数
 	* name
@@ -614,14 +616,16 @@ TB		1TB = 1024GB
 		固定大小: style="resize:none;"
 ```
 ### 默认值
-	* 是				 正文内容
-	* 不是			value属性
+```HTML
+* 是				 正文内容
+* 不是			value属性
+```
 
 
 
 
 ## button自定义按钮
-```
+```HTML
 * submit		只是单纯的提交给服务器
 * button		既具有提交给服务器的功能
 				又有自定义功能(配合js)
@@ -633,7 +637,7 @@ TB		1TB = 1024GB
 ```
 
 ## 表单常用属性
-```
+```HTML
 1. placeholder		背景字			提示信息
 2. maxlength		最大长度
 3. minlenght		最小长度
@@ -655,7 +659,7 @@ TB		1TB = 1024GB
 ```
 
 ## 关联标签
-```
+```HTML
 1. 关联标签
 	将表单与文本进行关联,选择文件如同选择表单
 	
@@ -669,11 +673,15 @@ TB		1TB = 1024GB
 ## head头
 
 ### 设置编码
-	<meta charset="UTF-8">
+```HTML
+<meta charset="UTF-8">
+```
 
 ### 网页标题
 
-  <title>head头</title>
+```HTML
+<title>head头</title>
+```
 
 ### 重定向
 ```
@@ -686,26 +694,35 @@ TB		1TB = 1024GB
 ```
 ### 关键字
 
-  <meta name="keywords" content"小米, 红米, MIX, 小米商城, Redmi">
+```HTML
+<meta name="keywords" content"小米, 红米, MIX, 小米商城, Redmi">
+```
 
 ### 描述
 
-  <meta name="description" content="xxxxxx,xxx,x,xxxx,xxx">
+```HTML
+ <meta name="description" content="xxxxxx,xxx,x,xxxx,xxx">
+```
+
 
 ### 导入css
 	<link rel="stylesheet" href="css文件地址">
 
 ### 导入图标
 	<link rel="icon" href="图标地址">
-	<link rel="shoricon icon" href="图标地址">		用于兼容IE
+	<link rel="shorticon icon" href="图标地址">		用于兼容IE
+	
+	两者一般一起使用,  但第一种不是必须的   主要是兼容浏览器
 
 ### 导入js
 
+```HTML
   <script src="js地址"></script>
+```
 
 
 ## 目前能够优化CEO引擎的有以下标签
-```
+```HTML
 		titile
 		h1
 		关键字
@@ -716,7 +733,9 @@ TB		1TB = 1024GB
 ## 实体符号
 
 ### 浏览器特征
-	代码中,连续输出多个空格or回车,到了浏览器中只能当做哟个空格来看待
+```HTML
+代码中,连续输出多个空格or回车,到了浏览器中只能当做一个空格来看待
+```
 
 ### 代码约定
 ```
@@ -730,7 +749,7 @@ TB		1TB = 1024GB
 			兄弟之间对齐
 ```
 ### 常见实体符号
-```
+```HTML
 	&nbsp;			空格
 	
 	&lt;			小于			<
@@ -748,10 +767,12 @@ TB		1TB = 1024GB
 
 ## 框架	
 ### 简介
-	这里所谓的框架是指: frame	分帧/窗口
+```HTML
+这里所谓的框架是指: frame	分帧/窗口
+```
 
 ### 框架标签
-```
+```HTML
 	* 框架设置标签: frameset
 	* 属性
 		* rows = 像素/百分比/*		(* 代表剩余空间)
@@ -787,7 +808,7 @@ TB		1TB = 1024GB
 ```
 
 ## IE浏览器实现HTML5新技术的识别
-```
+```HTML
 1. shiv
 	教 老IE 识别HTML5新技术
 	
