--- a/_posts/2020-02-10-CSS汇总.md
+++ b/_posts/2020-02-10-CSS汇总.md
@@ -8,20 +8,17 @@
 
 
 
-# 2019-12-5 笔记
-[TOC]
-
 # CSS
 
 ## css创建
 ### 外部样式
-```
+```HTML
 	* (正式项目,推荐)
 	* 在head头通过 link标签导入外部的css文件
 	* <link rel="stylesheet" href='css文件地址">
 ```
 ### 内部样式
-```
+```HTML
 	* (平台的开发,测试)
 	* 在head头通过 style标签当场写css样式
 		* 格式:
@@ -42,7 +39,7 @@
 			<开始标签 style="属性名:属性值; 属性名:属性值; ...>
 ```
 ### 导入式
-```
+```HTML
 	* head头部通过 style标签导入css文件
 	   * 格式
 	   	<style>
@@ -60,20 +57,20 @@
 
 ## 基础选择器
 ### HTML有四大通用属性
-```
+```HTML
 	* class				给属性元素取个绰号
 	* id				给当前元素取个身份证号
 	* style				给当前元素赋予css样式
 	* title				当鼠标悬停在元素上时,显示title内容
 ```
 ### CSS注释
-```
+```CSS
 	* 与HTML注释不同
 		css注释:
 				/*	初始内容	*/
 ```
 ### 标签选择器 (元素选择器)
-```
+```CSS
 		格式:
 			标签名{
                    属性名:属性值;
@@ -88,7 +85,7 @@
           								li	list-style:none;
 ```
 ### 类选择器	(class选择器)
-```
+```CSS
        		格式:
        			.class名{
                     属性名:属性值;
@@ -105,7 +102,7 @@
      			* 写选择器时,前面有一个小数点
 ```
 ### 身份选择器	(id选择器)
-```
+```CSS
        		格式:
        			#id名{
                      属性名:属性值;
@@ -122,7 +119,7 @@
 ```
 ### 注意	class 和 id 选择器区分大小写
 ## 关联选择器
-```
+```CSS
 1. 关联选择器	(关系选择器)
 	* 祖辈后辈关系
 	* 兄弟关系
@@ -140,7 +137,7 @@
 ```
 
 ## 组合选择器
-```
+```CSS
 1. 组合选择器
 	* 给不同的元素赋予相同的样式			(节省css代码)
 	* 格式:
@@ -152,7 +149,7 @@
 ```
 
 ## 属性选择器
-```
+```CSS
 1. 针对拥有某些属性的元素
 	s1		需要匹配的标签
 	att 	属性名
@@ -183,7 +180,7 @@
 ```
 ## 伪类选择器
 ### hover
-```
+```CSS
 * s1 : hover{.....}			当鼠标悬停在s1上时,触发css效果
 
 * 高阶hover(隔山打牛)
@@ -194,13 +191,13 @@
 ```
 
 ### focus
-```
+```CSS
 * s1 : focus{...}			当s1获取到光标时,触发css
 ```
 
 ### child
 
-```
+```CSS
 * 父级----------->顺序---------------->元素
 	* 先找到s1的父级	再找到父级里面的第一个元素	最后看这个元素是不是s1
 			(是:		则触发css效果	否:	不触发)
@@ -212,7 +209,7 @@
 
 ### of-type
 
-```
+```CSS
 * 父级-------------->元素-------------------->顺序
 
   * 先找到s1的父级	再找父级里面的所有s1元素	最后匹配s1中的第一个
@@ -236,19 +233,19 @@
 
 ### before
 
-```
+```CSS
 * s1 :: before{...}				匹配s1里面的最前面
 ```
 
 ### after
 
-```
+```CSS
 * s1 :: after{...}				匹配s1里面的最后面
 ```
 
 ## selection
 
-```
+```CSS
 :: selection{.....}				匹配被选中的内容
 ```
 
@@ -256,9 +253,9 @@
 
 ### 注
 
-```
+```CSS
 * before 和 after	会配合content属性使用
-	使用场景:	配合未来的浮动技术
+	使用场景:	配合浮动技术
 
 * content内容无法被选中
 ```
@@ -291,12 +288,12 @@
 
   * 注意:
     * 权重可以叠加
-    * 权重不能越级的(11 个便签不会 超过1个class)
+    * 权重不能越级的(11 个标签不会 超过1个class)
     * 最高权重也可以参与叠加
 
 # 继承性
 
-```
+```CSS
 * 绝大多数的属性都可以被后辈继承	只有小部分是无法继承的
 		* 例如:
 				* a链接的	color
@@ -342,7 +339,7 @@
 
 
 
-## oopacity
+## opacity
 
 * 透明度							范围:	0	~	1
   * 注:
@@ -353,7 +350,7 @@
 
 ## px
 
-```
+```CSS
 * px	像素		(随着电脑的分辨率变化而变换)
   1 in(英寸)=96 px
 
@@ -361,13 +358,13 @@
 
 ## %
 
-```
+```CSS
 * %	百分比		相对于父级大小
 ```
 
 ## em
 
-```
+```CSS
 * em	倍数
 
 	* 首行缩进	 text-indent: 2em;
@@ -375,7 +372,7 @@
 
 # 字体
 
-```
+```CSS
 * 祥写:
 	fort-family			字体家族
 						通用字体:	浏览器自带的,	例如:	serif,monospance 等
@@ -413,7 +410,7 @@
 
 # 背景
 
-```
+```CSS
 * 祥写
 	* background-color:			背景颜色
 	* background-image:			背景图片
@@ -427,7 +424,7 @@
 
 # 边框
 
-```
+```CSS
 * 方向: top bottom left right
 * 属性: color width style
 	* style不写,其他样式无法展示
@@ -438,14 +435,14 @@
 
 * 四边
 	border-属性:
-	border: [color] | {width] style
+	border: [color] | [width] | style
 
 * 案列
 	使用纯css实现 三角形
 ```
 # 圆角
 
-```
+```CSS
 * 祥写
 	border-上下-左右-radius: px 或 %
 
@@ -461,7 +458,7 @@
 
 # 表格边框合并
 
-```
+```CSS
 * border-collapse: collapse;
 
 * 与cellspacing="0"的区别
@@ -469,7 +466,7 @@
 
 # 轮廓
 
-```
+```CSS
 * outline: 值的写法与bordder一模一样
 			更多的场景是使用 none,	取消轮廓
 outline:none;
@@ -477,7 +474,7 @@ outline:none;
 
 # 列表
 
-```
+```CSS
 * 列表样式
 	list-style: none;					取消列表项目符号
 				disc;					默认
@@ -488,7 +485,7 @@ outline:none;
 
 # 溢出
 
-```
+```CSS
 * 祥写
 	overflow-x:
 			hidden				隐藏溢出的内容
@@ -552,7 +549,7 @@ outline:none;
 
 ## text-overflow
 
-```
+```CSS
 * text-overflow: ellipsis;
 一行文字溢出用...代替,需配合white-space 和 overflow 一起使用
 
@@ -566,7 +563,7 @@ outline:none;
 
 ## text-align&vertical-align
 
-```
+```CSS
 * text-align: 	left;			水平向左
 				center;			水平居中
 				right;			水平向右
@@ -584,7 +581,7 @@ outline:none;
 
 ## display
 
-```
+```CSS
 * 将当前元素转换为 其他元素
 
 	display: table-cell;			转换为 td元素
@@ -594,7 +591,7 @@ outline:none;
 
 ## cursor
 
-```
+```CSS
 * 属性值
 	pointer				小手
 	move				移动坐标
@@ -608,19 +605,19 @@ outline:none;
 
 ## 定义
 
-```
+```CSS
  既具有图片的形态,又具有文字的样式
 ```
 
 ## 在线地址
 
-```
+```CSS
 https://www.iconfont.cn
 ```
 
 ## Unicode字体图标
 
-```
+```CSS
 * 导入 iconfont.css
 	<link rel="stylesheet" href="./resource/iconfont/iconfont.css">
 * 选取你需要的字体图标的 Unicode代码
@@ -631,7 +628,7 @@ https://www.iconfont.cn
 
 ## font-class字体图标
 
-```
+```CSS
 * 导入 iconfont.css
 	<link rel="stylesheet" href="./resource/iconfont/iconfont.css">
 * 选取 你需要的字体图标的 class名
@@ -642,7 +639,7 @@ https://www.iconfont.cn
 
 ## 彩色Symbol字体图标
 
-```
+```CSS
 * 导入 iconfont.js
 	head头里加入
 	 <script src="./resource/iconfont/iconfont.js"></script>
@@ -664,7 +661,7 @@ https://www.iconfont.cn
 
 # 盒子模型
 
-```
+```CSS
 * 非IE盒子模型组成:	weight/height+ padding+ border(才是物理空间)
 		使用于:高版本IE.
 
@@ -682,7 +679,7 @@ https://www.iconfont.cn
 
 ## block
 
-```
+```CSS
 div 	h1~h6	p	ul	li
 * 独占一行
 * 宽度默认与父级(浏览器)一致
@@ -695,7 +692,7 @@ div 	h1~h6	p	ul	li
 
 ## inline
 
-```
+```CSS
 span, b, i, u, del, a ...
 * 同在一行
 * 宽度默认与内容有关
@@ -713,7 +710,7 @@ span, b, i, u, del, a ...
 
 ## display
 
-```
+```CSS
 block					将当前元素转换为 块级元素
 
 inline					将当前元素转换为 内联元素
@@ -726,18 +723,16 @@ table					将当前元素转换为 块级table元素
 
 table-cell				将当前元素转换为 td元素
 
-flex	常用于移动端(了解)
+flex	
 flex					将当前元素转换为 弹性盒子
 inline-flex				将当前元素转换为 内联弹性盒子
-
-参考25-元素转换.html
 ```
 
 
 
 ## visibility
 
-```
+```css
 hidden					隐藏当前元素(占位)
 
 visible					显示当前元素
@@ -865,7 +860,7 @@ visible					显示当前元素
 
 #### 方式一(原理)
 
-```
+```css
 * 在浮动元素的后面,  添加空元素,  并赋予clear属性
 
 * 由于出现空元素,	在W3C标准中,  认为这是一个无意义的标签,  所以尽可能不要使用该方法
@@ -907,7 +902,7 @@ visible					显示当前元素
 
 # 尺寸
 
-* width:							固定高度
+* width:							                         固定高度
 * height:                                                    固定高度
 * min-width:                                             最小宽度
 * max-width:                                             最大宽度
@@ -918,7 +913,7 @@ visible					显示当前元素
 
 ## 平滑过渡
 
-transition: 过渡的属性	持续时间	[速率]	[持续时间];
+transition: 过渡的属性	持续时间	[速率]	[延迟时间];
 
 ## 过渡的属性
 
@@ -930,7 +925,7 @@ transition: 过渡的属性	持续时间	[速率]	[持续时间];
 
 ### 多个属性过渡
 
-```
+```css
 * transition: 过渡的属性  持续时间	[速率] 	[延迟时间],	  过渡的属性  持续时间	[速率] 	[延迟时间], ....
 ```
 
@@ -988,7 +983,7 @@ transition: 过渡的属性	持续时间	[速率]	[持续时间];
 
 ## 原因
 
-```
+```css
 由于各大浏览器对属性默认值不是完全相同,导致相同的css代码在不同的浏览器中显示时, 会呈现不同的效果,
 为了避免这种情况, 做了css初始化, 来统一显示效果
 ```
@@ -1000,7 +995,7 @@ transition: 过渡的属性	持续时间	[速率]	[持续时间];
   * 原因2:  能有效的区分js
 * 要求2:  id名要求唯一性
   * 原因: js无法准确获取重复的id
-* 要求3:  选择器名称取得要有意义,不要使用中文式英语,拼音,学会查字典
+* 要求3:  选择器名称取得要有意义,不要使用中文式英语,拼音
 
 # filter
 
