--- a/_posts/2020-02-11-JS汇总.md
+++ b/_posts/2020-02-11-JS汇总.md
@@ -7,10 +7,6 @@
   JS 
 
 
-# 2019-12-12笔记
-
-[TOC]
-
 # Js简介
 
 ## 应用
@@ -108,7 +104,7 @@
 
 ## 外部导入
 
-```
+```js
 <script src="css地址"></script>
 可写在头部,也可写在body中	常写在最后面
 原因
@@ -118,7 +114,7 @@
 
 ## 内部现写js
 
-```
+```js
 <script>
 	alert('弹窗');
 </script>
@@ -130,7 +126,7 @@
 
 * onclick 就是 html属性,  代表  单击事件
 
-```
+```js
 <button onclick="alert('通过点击按钮触发')">点我一下</button>
 ```
 
@@ -148,7 +144,7 @@
 
   * 一条语句 最好不要超过80个字符
 
-    ```
+    ```js
     <script>
     	alert('1111') alert('2222')		 //	报错
 
@@ -163,7 +159,7 @@
 
 * 在运算符的前后, 添加空格.  增加代码的可读性
 
-* ```
+* ```js
   <script>
   	alert(1 + 2);
   </script>
@@ -269,7 +265,7 @@ typeof   	var     	void    	while       	with
 
 * 不支持变量提升
 
-  ```
+  ```js
    //  window   全局
              var x7 = 70;
              let y8 = 80;
@@ -296,21 +292,19 @@ typeof   	var     	void    	while       	with
 
 * 注:
   * 变量定义未赋值 undefined
-  * 变量未声明就是用  不报错
+  * 变量未声明就使用  不报错
   * document.write(m)// 更新页面输出 页面会刷新
-
-​
 
 # 数据类型
 
 ## 原始类型(基础类型)
 
-* string					字符串
-* number                                  数字
+* string					                  字符串
+* number                                   数字
 * boolean                                  布尔
-* null                                          空
+* null                                         空
 * undefined                               未定义
-* symbol                                    ES6 新增类型
+* symbol                                   ES6 新增类型
 
 ## 引用类型(复合类型)
 
@@ -2449,7 +2443,7 @@ document.write('<hr />');
 - 劣势:
   - 由于生命周期延长了, 内存不能及时释放函数A的变量, 导致内存消耗过大
 
-​
+
 
 ```
 <script>
@@ -4326,7 +4320,7 @@ document.write('<hr />');
 - 元素节点.scrollHeigth                            获取该节点的滚动区间高度 (不包含滚动条)
 - 元素节点.scrollLeft                                 获取该节点滚动条距离最左侧的距离
 - 元素节点.scrollTop                                 获取该节点滚动条距离最顶部的距离
-- ​
+- 
 - 元素节点.NodeName                             获取该节点的名字
 - 元素节点.NodeType                               获取该节点的类型
 - 元素节点.NodeValue                             获取该节点的值
